tests/ui/transmutability/references/recursive-wrapper-types-bit-incompatible.stderr
error[E0277]: `B` cannot be safely transmuted into `A` in the defining scope of `assert::Context`
  --> $DIR/recursive-wrapper-types-bit-incompatible.rs:24:49
   |
LL |     assert::is_maybe_transmutable::<&'static B, &'static A>();
   |                                                 ^^^^^^^^^^ At least one value of `B` isn't a bit-valid value of `A`
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/recursive-wrapper-types-bit-incompatible.rs:10:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: false,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
